--- a/internal/BUILD.bazel
+++ b/internal/BUILD.bazel
@@ -17,6 +17,7 @@ filegroup(
         "//internal/controller/certificates:all-srcs",
         "//internal/controller/feature:all-srcs",
         "//internal/controller/issuers:all-srcs",
+        "//internal/controller/orders:all-srcs",
         "//internal/ingress:all-srcs",
         "//internal/plugin:all-srcs",
         "//internal/test/paths:all-srcs",
