--- a/pkg/controller/acmeorders/BUILD.bazel
+++ b/pkg/controller/acmeorders/BUILD.bazel
@@ -11,6 +11,8 @@ go_library(
     importpath = "github.com/cert-manager/cert-manager/pkg/controller/acmeorders",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/controller/feature:go_default_library",
+        "//internal/controller/orders:go_default_library",
         "//pkg/acme:go_default_library",
         "//pkg/acme/accounts:go_default_library",
         "//pkg/acme/client:go_default_library",
@@ -26,6 +28,7 @@ go_library(
         "//pkg/issuer:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/scheduler:go_default_library",
+        "//pkg/util/feature:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/equality:go_default_library",
