--- a/pkg/controller/BUILD.bazel
+++ b/pkg/controller/BUILD.bazel
@@ -40,6 +40,7 @@ go_library(
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_client_go//tools/clientcmd:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
+        "@io_k8s_client_go//util/flowcontrol:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
         "@io_k8s_sigs_gateway_api//apis/v1alpha1:go_default_library",
         "@io_k8s_sigs_gateway_api//pkg/client/clientset/versioned:go_default_library",
@@ -77,6 +78,10 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = ["util_test.go"],
+    srcs = [
+        "context_test.go",
+        "util_test.go",
+    ],
     embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
