--- a/pkg/controller/cainjector/BUILD.bazel
+++ b/pkg/controller/cainjector/BUILD.bazel
@@ -12,9 +12,12 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/controller/cainjector",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/cainjector/feature:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/logs:go_default_library",
+        "//pkg/util:go_default_library",
+        "//pkg/util/feature:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//admissionregistration/v1:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
@@ -32,6 +35,7 @@ go_library(
         "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
         "@org_golang_x_sync//errgroup:go_default_library",
     ],
 )
