Optionally Apply certificates, instead of update, in certificate-shim when Server-Side apply is enabled
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/pkg/controller/certificate-shim/BUILD.bazel
+++ b/pkg/controller/certificate-shim/BUILD.bazel
@@ -9,6 +9,8 @@ go_library(
     importpath = "github.com/cert-manager/cert-manager/pkg/controller/certificate-shim",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/controller/certificates:go_default_library",
+        "//internal/controller/feature:go_default_library",
         "//internal/ingress:go_default_library",
         "//pkg/api/util:go_default_library",
         "//pkg/apis/acme/v1:go_default_library",
@@ -18,6 +20,7 @@ go_library(
         "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller:go_default_library",
         "//pkg/logs:go_default_library",
+        "//pkg/util/feature:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_api//networking/v1:go_default_library",
