--- a/test/e2e/suite/certificates/BUILD.bazel
+++ b/test/e2e/suite/certificates/BUILD.bazel
@@ -2,17 +2,24 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["secrettemplate.go"],
-    importpath = "github.com/cert-manager/cert-manager/test/e2e/suite/secrettemplate",
+    srcs = [
+        "additionaloutputformats.go",
+        "secrettemplate.go",
+    ],
+    importpath = "github.com/cert-manager/cert-manager/test/e2e/suite/certificates",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/controller/feature:go_default_library",
+        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/util/feature:go_default_library",
         "//test/e2e/framework:go_default_library",
         "//test/e2e/util:go_default_library",
         "//test/unit/gen:go_default_library",
         "@com_github_onsi_ginkgo//:go_default_library",
         "@com_github_onsi_gomega//:go_default_library",
+        "@com_github_onsi_gomega//gstruct:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_client_go//applyconfigurations/core/v1:go_default_library",
