--- a/pkg/controller/certificates/issuing/BUILD.bazel
+++ b/pkg/controller/certificates/issuing/BUILD.bazel
@@ -65,6 +65,7 @@ go_test(
         "@io_k8s_client_go//testing:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_utils//clock/testing:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
     ],
 )
 
