add name to the exposed metrics port
Signed-off-by: Alexey Miasoedov <alexey.miasoedov@gmail.com>

--- a/deploy/charts/cert-manager/templates/deployment.yaml
+++ b/deploy/charts/cert-manager/templates/deployment.yaml
@@ -115,6 +115,7 @@ spec:
           {{- end }}
           ports:
           - containerPort: 9402
+            name: http-metrics
             protocol: TCP
           {{- with .Values.containerSecurityContext }}
           securityContext:
