make: fix message when CMREL_KEY isn't set
Double quotes are not interpreted by make, which meant that the variable
CMREL_KEY was set to '""' and was never empty, which means the $(error
...) block was never interpreted.

Signed-off-by: Maël Valais <mael@vls.dev>

--- a/make/Makefile
+++ b/make/Makefile
@@ -28,7 +28,7 @@ GOBUILDPROCS ?=
 # Set this as an environment variable to enable signing commands using cmrel
 # Format should be:
 # projects/<project>/locations/<location>/keyRings/<keyring>/cryptoKeys/<keyname>/cryptoKeyVersions/<keyversion>
-CMREL_KEY ?= ""
+CMREL_KEY ?=
 
 HOST_OS = $(shell $(GO) env GOOS)
 HOST_ARCH = $(shell $(GO) env GOARCH)
