remove serviceAccount field if create != true or SA name is not specified Signed-off-by: Roman Pertsev <pertsev.roman@gmail.com>

--- a/deploy/charts/cert-manager/templates/deployment.yaml
+++ b/deploy/charts/cert-manager/templates/deployment.yaml
@@ -48,7 +48,9 @@ spec:
         prometheus.io/port: '9402'
       {{- end }}
     spec:
+      {{- if (or .Values.serviceAccount.create .Values.serviceAccount.name) }}
       serviceAccountName: {{ template "cert-manager.serviceAccountName" . }}
+      {{- end }}
       {{- with .Values.global.priorityClassName }}
       priorityClassName: {{ . | quote }}
       {{- end }}
