--- a/cmd/ctl/pkg/uninstall/BUILD.bazel
+++ b/cmd/ctl/pkg/uninstall/BUILD.bazel
@@ -2,16 +2,17 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["experimental.go"],
-    importpath = "github.com/cert-manager/cert-manager/cmd/ctl/pkg/experimental",
+    srcs = ["uninstall.go"],
+    importpath = "github.com/cert-manager/cert-manager/cmd/ctl/pkg/uninstall",
     visibility = ["//visibility:public"],
     deps = [
-        "//cmd/ctl/pkg/create:go_default_library",
-        "//cmd/ctl/pkg/create/certificatesigningrequest:go_default_library",
-        "//cmd/ctl/pkg/install:go_default_library",
-        "//cmd/ctl/pkg/uninstall:go_default_library",
+        "//cmd/ctl/pkg/build:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
+        "@sh_helm_helm_v3//pkg/action:go_default_library",
+        "@sh_helm_helm_v3//pkg/cli:go_default_library",
+        "@sh_helm_helm_v3//pkg/release:go_default_library",
+        "@sh_helm_helm_v3//pkg/storage/driver:go_default_library",
     ],
 )
 
